# orchestra-rs

./: Cargo.toml  LICENSE  README.md  architecture.md  tool_calling_architecture.md
examples/: basic_usage.rs
orchestra-core/: Cargo.toml
orchestra-core/examples/: advanced_tool_patterns.rs  basic_usage.rs  tool_calling.rs
orchestra-core/src/: error.rs  lib.rs
orchestra-core/src/llm/: mod.rs
orchestra-core/src/messages/: mod.rs
orchestra-core/src/model/: config.rs  mod.rs
orchestra-core/src/providers/: config.rs  mock.rs  mod.rs  types.rs
orchestra-core/src/providers/gemini/: impl.rs  mod.rs  types.rs
orchestra-core/src/tools/: builtin.rs  definition.rs  execution.rs  mod.rs  registry.rs  result.rs
src/completion/: errors.rs  message.rs  mod.rs
src/model/: config.rs
src/providers/: mod.rs  types.rs
src/providers/gemini/: impl.rs  mod.rs  types.rs
