[package]
name = "orchestra-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.83"
env_logger = "0.11.8"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
