[package]
name = "orchestra-rs"
version = "0.1.0"
edition = "2024"
description = "An orchestration framework for building AI agents using multiple LLM providers."
keywords = [
    "AI",
    "ai-agents",
    "gemini",
    "generative-ai",
    "open-ai",
]
repository = "https://github.com/ayoubbuoya/orchestra-rs"
readme = "README.md"
license = "MIT"
authors = ["Ayoub Amer <ayouub.ameur@gmail.com>"]


[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.83"
env_logger = "0.11.8"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
