[package]
name = "orchestra-core"
version = "0.1.0"
edition = { workspace = true }


[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
env_logger = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
